# CrewAI-Trading-Agent

./: 01_search.md  02_summary.md  03_format.md  04_translate.md  05_send.md  README.md  pyproject.toml
Trading_agent_project/trading_agent/: 01_search.md  02_summary.md  03_format.md  04_translate.md  README.md  pyproject.toml
Trading_agent_project/trading_agent/src/trading_agent/: crew.py  main.py  sendtemp.py
Trading_agent_project/trading_agent/src/trading_agent/config/: agents.yaml  tasks.yaml
src/trading_agent/: crew.py  main.py
src/trading_agent/config/: agents.yaml  tasks.yaml
