[project]
name = "trading_agent"
version = "0.1.0"
description = "CrewAI-based financial market summary agent"
authors = [{ name = "name", email = "example@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "python-dotenv",
    "litellm",
    "requests"
]

[project.scripts]
run_crew = "trading_agent.main:run"
train = "trading_agent.main:train"
replay = "trading_agent.main:replay"
test = "trading_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"